--- a/CatlogodeContatos/app/src/main/res/layout/activity_cadastro_contato.xml
+++ b/CatlogodeContatos/app/src/main/res/layout/activity_cadastro_contato.xml
@@ -24,6 +24,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="text"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
                 android:hint="Nome do contato"/>
 
         </android.support.design.widget.TextInputLayout>
@@ -39,6 +41,8 @@
                 android:id="@+id/txt_endereco"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
                 android:hint="Endereço"
                 />
 
@@ -55,6 +59,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="number"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
                 android:hint="Número de telefone"/>
 
 
@@ -70,6 +76,8 @@
                 android:id="@+id/txt_email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
                 android:inputType="textEmailAddress"
                 android:hint="E-mail"/>
 
@@ -86,6 +94,8 @@
                 android:id="@+id/txt_endereco_linkedin"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
                 android:hint="Endereço Linkedin"/>
 
 
