Versão 03 - validação / notificação / ligação

--- a/CatlogodeContatos/app/src/main/res/menu/menu_cadastro_contatos.xml
+++ b/CatlogodeContatos/app/src/main/res/menu/menu_cadastro_contatos.xml
@@ -13,8 +13,8 @@
         android:icon="@drawable/ic_salvar"
         app:showAsAction="always"/>
     <item
-        android:id="@+id/menu_configuracoes"
-        android:title="Configurações" />
+        android:id="@+id/menu_ligar"
+        android:title="Ligar" />
 
 
 
