--- a/CatlogodeContatos/app/src/main/res/values/colors.xml
+++ b/CatlogodeContatos/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#FF4081</color>
     <color name="colorBlue">#3f51b5</color>
     <color name="colorOrange">#ffb200</color>
+    <color name="colorGreen">#1d6e17</color>
 </resources>
